escalation-eda/helm/escalation-eda/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 600s
    kubernetes.io/tls-acme: "true"
  name: http-jira-listener 
  namespace: knative-serving-ingress 
spec:
  host: jira-listener-escalation.apps.sssc-cl01.appeng.rhecoeng.com
  port:
    targetPort: http2
  to:
    kind: Service
    name: kourier
    weight: 100
  wildcardPolicy: None
